--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@typescript-eslint/parser": "^4.1.1",
     "antd": "^4.6.3",
     "axios": "^0.20.0",
     "classnames": "^2.2.6",
+    "eslint": "^7.9.0",
     "jwt-decode": "^3.0.0-beta.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -22,11 +24,15 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "./node_modules/.bin/ eslint --ext .js --ext .jsx ."
   },
   "proxy": "http://localhost:5000",
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "ignorePatterns": [
+      "node_modules/*.js"
+    ]
   },
   "browserslist": {
     "production": [
