--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,10 @@
     "antd": "^4.6.3",
     "axios": "^0.20.0",
     "classnames": "^2.2.6",
-    "eslint": "^7.9.0",
     "jwt-decode": "^3.0.0-beta.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-highlight-words": "^0.16.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
